[package]
name = "RustyPassman"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
base64 = "0.22.1"
dotenv = "0.15.0"
rand = "0.9.2"
rand_core = { version="0.6", features=["getrandom"] }
rpassword = "7.4.0"
serde = { version="1.0.228", features=["derive"] }
serde_json = "1.0.145"
